--- a/mongoose-5.1
+++ b/mongoose-5.1
@@ -1,6 +1,5 @@
-URL=https://github.com/valenok/mongoose
-TYPE=git
-GITARGS="-b 5.1"
+URL=https://github.com/cesanta/mongoose/archive/5.1.tar.gz
+TYPE=tar
 DESC="Mongoose web server"
 PKGINSTALL=_mongooseinstall
 
